Initial - Not Final

--- a/911.ipynb
+++ b/911.ipynb
@@ -891,6 +891,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%timeit sns.pairplot(df_plot,hue='day of week')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
